--- a/package.json
+++ b/package.json
@@ -1,19 +1,34 @@
 {
   "name": "komitet",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "start": "nodemon index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.7"
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^4.1.2",
+    "mongoose": "^6.0.7",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "axios": "^0.21.4",
     "nodemon": "^2.0.12"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/s-cod/komitet.git"
+  },
+  "bugs": {
+    "url": "https://github.com/s-cod/komitet/issues"
+  },
+  "homepage": "https://github.com/s-cod/komitet#readme",
+  "description": ""
 }
