--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.1.2",
     "mongoose": "^6.0.7",
+    "nodemailer": "^6.6.5",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
